--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body{
     float: left;
 }
 .header_5{
-/*     margin-left: 1290px; */
+    margin-left: 1290px;
     height: 100px;
     width: 200px;
 
