--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body{
 .header4{
     height: 100px;
     width: 115px;
-/*     margin-left: 795px; */
+    margin-left: 795px;
     float: left;
 }
 .header_5{
